--- a/src/payment-success.css
+++ b/src/payment-success.css
@@ -13,11 +13,12 @@
   font-size: 24px;
   font-weight: 400;
   text-align: center;
+  margin-top: 20px;
 }
 
 .image {
-  height: 400px;
-  width: 400px;
+  height: 360px;
+  width: 360px;
 }
 
 .image > img {
@@ -29,30 +30,40 @@
 
 .footer {
   font-size: 24px;
+  margin-bottom: 2px;
 }
 
 .footer > p {
-  padding: 8px 64px;
+  padding: 10px 68px;
   border: 2px solid black;
 }
 
 @media screen and (max-width: 768px) {
+  .success-wrapper {
+    padding: 8px;
+  }
+
   .header > h1 {
-    font-size: 14px;
+    font-size: 22px;
     text-align: left;
+    line-height: 1.27;
+    padding-left: 20px;
   }
 
   .image {
-    height: 320px;
-    width: 320px;
+    height: 300px;
+    width: 300px;
   }
 
   .footer {
-    font-size: 16px;
-    
+    font-size: 22px;
+    padding: 0px 24px;
+    width: 100%;
   }
 
   .footer > p {
-    padding: 8px 16px;
+    padding: 13px 0;
+    width: 100%;
+    text-align: center;
   }
 }
